crates/ink/tests/ui/event/fail/generics.rs
#[derive(ink::Event)]
pub struct Event<T> {
    #[ink(topic)]
    pub topic: T,
}

fn main() {}